# naf_workshop_nuts_lab

./: .gitignore  README.md  nr-config.yaml  pyproject.toml  report.xml
.devcontainer/: Dockerfile  devcontainer.json
inventory/: defaults.yaml  groups.yaml
mocked_inventory/: hosts.yaml
mocked_napalm_data/r01/: cli.1.show_ip_route_10_0_0_10_32_json.0  cli.1.show_ip_route_10_0_0_1_32_json.0  cli.1.show_ip_route_10_0_0_2_32_json.0  cli.1.show_ip_route_10_0_0_3_32_json.0  cli.1.show_ip_route_10_0_0_4_32_json.0  cli.1.show_ip_route_10_0_0_5_32_json.0  cli.1.show_ip_route_10_0_0_6_32_json.0  cli.1.show_ip_route_10_0_0_7_32_json.0  cli.1.show_ip_route_10_0_0_8_32_json.0  cli.1.show_ip_route_10_0_0_9_32_json.0  get_bgp_config.1  get_bgp_neighbors.1  get_bgp_neighbors_detail.1  get_facts.1  get_interfaces.1  get_interfaces_counters.1  get_interfaces_ip.1  get_lldp_neighbors.1  get_lldp_neighbors_detail.1
mocked_napalm_data/r02/: cli.1.show_ip_ospf_json.0  cli.1.show_ip_ospf_neighbor_json.0  cli.1.show_ip_ospf_neighbor_summary_json.0  cli.1.show_ip_route_10_0_0_10_32_json.0  cli.1.show_ip_route_10_0_0_1_32_json.0  cli.1.show_ip_route_10_0_0_2_32_json.0  cli.1.show_ip_route_10_0_0_3_32_json.0  cli.1.show_ip_route_10_0_0_4_32_json.0  cli.1.show_ip_route_10_0_0_5_32_json.0  get_bgp_config.1  get_facts.1  (+11 more)
my_module/: isis.py  ospf.py
netlab/: .clab.yml.bak  create_mocked_data.py  defaults.yml  topology.yml
tests/: conftest.py  test_bgp.yaml  test_interfaces.yaml  test_isis_neighbors.yaml  test_lldp_neighbors.yaml  test_lldp_neighbors_demo.yaml  test_ospf_neighbors.yaml
(+169 files in other folders)
