[project]
name = "naf-workshop-nuts-lab"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "napalm>=5.0.0",
    "netmiko>=4.5.0",
    "nornir>=3.5.0",
    "nornir-napalm>=0.5.0",
    "nornir-netmiko>=1.0.1",
    "nornir-utils>=0.2.0",
    "nuts>=3.5.0",
]
[tool.pytest.ini_options]
addopts = "--disable-warnings"